[package]
name = "solve_string"
version = "0.1.0"
authors = ["wyatt osterling <wyatt.osterling@hotmail.com>"]
edition = "2018"
description = "A package with the goal of implementing python eval functionality in rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "Apache-2.0"
[dependencies]
